--- a/src/main/resources/templates/mainpage.html
+++ b/src/main/resources/templates/mainpage.html
@@ -3,31 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>내 블로그</title>
-    <link rel="stylesheet" href="/css/mainpage_styles.css">
+    <link rel="stylesheet" href="/static/css/mainpage/mainpage_styles.css">
 </head>
 <body>
-    <div class="toggle-mode">
-        <label class="switch">
-            <input type="checkbox" id="modeToggle">
-            <span class="slider"></span>
-        </label>
-    </div>
-    <div class="container">
-        <aside>
-            <h3>태그</h3>
-            <ul id="tagList" class="tag-list">
-            </ul>
-        </aside>
-        <main>
-            <div class="search-box">
-                <input type="text" id="searchInput" placeholder="검색어를 입력하세요">
-            </div>
-            <div id="postList">
-            </div>
-            <div id="errorMessage" class="error-message" style="display: none;">
-            </div>
-        </main>
-    </div>
-    <script src="/js/mainpage_script.js"></script>
+<div class="toggle-mode">
+    <label class="switch">
+        <input type="checkbox" id="modeToggle">
+        <span class="slider"></span>
+    </label>
+</div>
+<div class="container">
+    <aside>
+        <h3>태그</h3>
+        <ul id="tagList" class="tag-list">
+        </ul>
+    </aside>
+    <main>
+        <div class="search-box">
+            <input type="text" id="searchInput" placeholder="검색어를 입력하세요">
+        </div>
+        <div class="sort-controls">
+            <select id="sortSelect" class="sort-select">
+                <option value="newest">최신순</option>
+                <option value="oldest">오래된순</option>
+                <option value="views">조회수순</option>
+            </select>
+        </div>
+        <div id="postList" class="post-grid">
+        </div>
+        <div id="errorMessage" class="error-message" style="display: none;">
+        </div>
+    </main>
+</div>
+<script src="/static/js/mainpage/mainpage_util_script.js"></script>
+<script src="/static/js/mainpage/mainpage_script.js"></script>
 </body>
 </html>
