feat: 게시글 상세 페이지 구성
글 클릭 시 게시슬 상세 페이지가 노출되도록 구현하였습니다

--- a/src/main/resources/templates/postpage.html
+++ b/src/main/resources/templates/postpage.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="/css/postpage/postpage_styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>글 상세 보기</title>
+    <link rel="stylesheet" href="/css/postpage/postpage_styles.css">
 </head>
 <body>
+<div class="toggle-mode">
+    <label class="switch">
+        <input type="checkbox" id="modeToggle">
+        <span class="slider"></span>
+    </label>
+</div>
+<div class="container">
+    <main>
+        <div id="postDetail" class="post-detail">
+        </div>
+        <div id="errorMessage" class="error-message" style="display: none;"></div>
+    </main>
+</div>
 <script src="/js/postpage/postpage_script.js"></script>
 </body>
 </html>
